# python-dev-env

./: .env  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
example/: main.py
requirements/: dev.txt  prod.txt
